--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <nav>
                                 <div class="product nav">
                                     <button class="main-btn opacity-drop">
-                                        Product
+                                        Production
                                         <picture>
                                             <source
                                                 media="(min-width:1000px)"
